fix: wrap text in product detail page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -229,8 +229,6 @@ input[type=number]::-webkit-outer-spin-button {
 .product-option-text {
   font-size: 16px;
   color: #aaaaaa;
-  padding-bottom: 10px;
-  padding-top: 10px;
 }
 .seporator {
   padding-top: 5px;
